--- a/api/templates/spotify.html.j2
+++ b/api/templates/spotify.html.j2
@@ -9,6 +9,7 @@
 
                 .currentStatus {
                     float: left;
+                    color: #87bba2;
                     font-size: 24px;
                     position: static;
                     margin-top: -5px;
